Internships page redo

--- a/index.html
+++ b/index.html
@@ -34,13 +34,10 @@ MMMMMMMMMMMMMMMMMMMMM.                             MMMMMMMMMMMMMMMMMMMMM
 
 		<title>Anirudh Goel</title>
 		
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="shortcut icon" href="img/icon2.png">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
-		<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,100,600,300|Quicksand:400,300' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Lato:300,400|Poiret+One' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	</head>
 
 	<body>
@@ -340,9 +337,89 @@ MMMMMMMMMMMMMMMMMMMMM.                             MMMMMMMMMMMMMMMMMMMMM
 					</span>
 				</div>
 				<br>
-				<div class='container'>
+				<div class='container-fluid' align="center">
 					<div class='row'>
-						<div class='col-sm-4'>
+						<div class="col-md-6">
+							<div class="row">
+								<div class="intern-box">
+									<div class="col-sm-4">
+										<div class='intern-panel-heading'>
+											<img src="img/intern/AIESEC Logo.jpg" alt='AIESEC' class='intern-img img-responsive'>
+										</div>
+									</div>
+									<div class="col-sm-8" align="left">
+										<div class="intern-panel-body">
+											<strong>AIESEC</strong>
+											<li>Recruited 5 Associate Members for my team.</li>
+											<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
+											<li>Raised 7 foreign candidates for coming to India for Internships.</li>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="row">
+								<div class="intern-box">
+									<div class="col-sm-4">
+										<div class='intern-panel-heading'>
+											<img src="img/intern/AIESEC Logo.jpg" alt='AIESEC' class='intern-img img-responsive'>
+										</div>
+									</div>
+									<div class="col-sm-8" align="left">
+										<div class="intern-panel-body">
+											<strong>AIESEC</strong>
+											<li>Recruited 5 Associate Members for my team.</li>
+											<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
+											<li>Raised 7 foreign candidates for coming to India for Internships.</li>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class='row'>
+						<div class="col-md-6">
+							<div class="row">
+								<div class="intern-box">
+									<div class="col-sm-4">
+										<div class='intern-panel-heading'>
+											<img src="img/intern/AIESEC Logo.jpg" alt='AIESEC' class='intern-img img-responsive'>
+										</div>
+									</div>
+									<div class="col-sm-8" align="left">
+										<div class="intern-panel-body">
+											<strong>AIESEC</strong>
+											<li>Recruited 5 Associate Members for my team.</li>
+											<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
+											<li>Raised 7 foreign candidates for coming to India for Internships.</li>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="row">
+								<div class="intern-box">
+									<div class="col-sm-4">
+										<div class='intern-panel-heading'>
+											<img src="img/intern/AIESEC Logo.jpg" alt='AIESEC' class='intern-img img-responsive'>
+										</div>
+									</div>
+									<div class="col-sm-8" align="left">
+										<div class="intern-panel-body">
+											<strong>AIESEC</strong>
+											<li>Recruited 5 Associate Members for my team.</li>
+											<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
+											<li>Raised 7 foreign candidates for coming to India for Internships.</li>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+						<!-- <div class='col-sm-4'>
 							<center>
 								<div class='intern-panel'>
 									<div class='panel panel-default'>
@@ -392,7 +469,7 @@ MMMMMMMMMMMMMMMMMMMMM.                             MMMMMMMMMMMMMMMMMMMMM
 											<div class='intern-panel-body'>
 												<li>Hosted a Mozilla Awareness session at <strong>Hack@NSIT</strong> Hackathon.</li>
 												<li>Made my own <a href="https://onefirefoxblog.wordpress.com/">Mozilla Blog</a> to present my experiences.</li>
-												<li>As the <strong>Club Lead</strong>, inspired my fellow classmates to join Mozilla.</li>a
+												<li>As the <strong>Club Lead</strong>, inspired my fellow classmates to join Mozilla.</li>
 											</div>
 										</div>
 										<div class='panel-footer'>
@@ -441,8 +518,8 @@ MMMMMMMMMMMMMMMMMMMMM.                             MMMMMMMMMMMMMMMMMMMMM
 									</div>
 								</div>
 							</center>
-						</div>
-					</div>
+						</div> -->
+					<!-- </div> -->
 				</div>
 				<br>
 				<!-- AIESEC
@@ -731,9 +808,9 @@ MMMMMMMMMMMMMMMMMMMMM.                             MMMMMMMMMMMMMMMMMMMMM
 		</div>
 	</body>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js" async></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" async></script>
-		<script src="js/resume.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="js/resume.js"></script>
 		<!-- <link rel="stylesheet" type="text/css" href="css/media-queries.min.css"> -->
 		
 		<!-- Files for Vertical Dot Navigation Styles and One page scroll -->
