Intern section new layout

--- a/index.html
+++ b/index.html
@@ -340,56 +340,79 @@ MMMMMMMMMMMMMMMMMMMMM.                             MMMMMMMMMMMMMMMMMMMMM
 				<div class='container-fluid' align="center">
 					<div class='row'>
 						<div class="col-md-6">
-							<div class="row">
-								<div class="intern-box">
+							<div class="intern-box">
+								<div class="row">
 									<div class="col-sm-4">
-										<div class='intern-panel-heading'>
-											<img src="img/intern/AIESEC Logo.jpg" alt='AIESEC' class='intern-img img-responsive'>
+										<div class='intern-panel-image'>
+											<img src="img/intern/Acad.png" alt='Academistic' class='intern-img img-responsive' style="height: 75px; margin-top: 37px;">
 										</div>
 									</div>
 									<div class="col-sm-8" align="left">
 										<div class="intern-panel-body">
-											<strong>AIESEC</strong>
-											<li>Recruited 5 Associate Members for my team.</li>
-											<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
-											<li>Raised 7 foreign candidates for coming to India for Internships.</li>
+											<div class="intern-box-heading" align="center">
+												<strong><a href="http://www.academistic.com/">Academistic</a></strong>
+												<br>
+												<div class="col-sm-6 intern-post">Full Stack Developer</div>
+												<div class="col-sm-6 intern-time">June '16 - July '16</div>
+											</div>
+											I learnt endless things about Linux, Git, PHP, MySQL, jQuery and many more technologies here.
+											Some of the tasks I accomplished here are- <br>
+											1. Implemented Lazy Load <br>
+											2. Redesigned the entire login system using OTP Verification <br>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6">
-							<div class="row">
-								<div class="intern-box">
+							<div class="intern-box">
+								<div class="row">
 									<div class="col-sm-4">
-										<div class='intern-panel-heading'>
-											<img src="img/intern/AIESEC Logo.jpg" alt='AIESEC' class='intern-img img-responsive'>
+										<div class='intern-panel-image'>
+											<img src="img/intern/Mozilla Logo.png" alt='Mozilla' class='intern-img'>
 										</div>
 									</div>
 									<div class="col-sm-8" align="left">
 										<div class="intern-panel-body">
-											<strong>AIESEC</strong>
-											<li>Recruited 5 Associate Members for my team.</li>
-											<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
-											<li>Raised 7 foreign candidates for coming to India for Internships.</li>
+											<div class="intern-box-heading" align="center">
+												<strong>Mozilla</strong>
+												<br>
+												<div class="col-sm-6 intern-post">
+													<strong>
+														<span style="color: red;">
+															Junior
+														</span>
+														 | Club Lead
+													</strong>
+												</div>
+												<div class="col-sm-6 intern-time">Oct '15 - Present</div>
+											</div>
+											<li>Hosted a Mozilla Awareness session at <strong>Hack@NSIT</strong> Hackathon.</li>
+											<li>Made my own <a href="https://onefirefoxblog.wordpress.com/">Mozilla Blog</a> to present my experiences.</li>
+											<li>As the <strong>Club Lead</strong>, inspired my fellow classmates to join Mozilla.</li>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class='row'>
+					<div class="row">
 						<div class="col-md-6">
-							<div class="row">
-								<div class="intern-box">
+							<div class="intern-box">
+								<div class="row">
 									<div class="col-sm-4">
-										<div class='intern-panel-heading'>
+										<div class='intern-panel-image'>
 											<img src="img/intern/AIESEC Logo.jpg" alt='AIESEC' class='intern-img img-responsive'>
 										</div>
 									</div>
 									<div class="col-sm-8" align="left">
 										<div class="intern-panel-body">
-											<strong>AIESEC</strong>
+											<div class="intern-box-heading" align="center">
+												<strong>AIESEC</strong>
+												<br>
+												<div class="col-sm-6 intern-post">Core Manager</div>
+												<div class="col-sm-6 intern-time">Aug '14 - Dec '14</div>
+											</div>
 											<li>Recruited 5 Associate Members for my team.</li>
 											<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
 											<li>Raised 7 foreign candidates for coming to India for Internships.</li>
@@ -399,16 +422,21 @@ MMMMMMMMMMMMMMMMMMMMM.                             MMMMMMMMMMMMMMMMMMMMM
 							</div>
 						</div>
 						<div class="col-md-6">
-							<div class="row">
-								<div class="intern-box">
+							<div class="intern-box">
+								<div class="row">
 									<div class="col-sm-4">
-										<div class='intern-panel-heading'>
+										<div class='intern-panel-image'>
 											<img src="img/intern/AIESEC Logo.jpg" alt='AIESEC' class='intern-img img-responsive'>
 										</div>
 									</div>
 									<div class="col-sm-8" align="left">
 										<div class="intern-panel-body">
-											<strong>AIESEC</strong>
+											<div class="intern-box-heading" align="center">
+												<strong>AIESEC</strong>
+												<br>
+												<div class="col-sm-6 intern-post">Core Manager</div>
+												<div class="col-sm-6 intern-time">Aug '14 - Dec '14</div>
+											</div>
 											<li>Recruited 5 Associate Members for my team.</li>
 											<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
 											<li>Raised 7 foreign candidates for coming to India for Internships.</li>
