removed some center tags

--- a/index.html
+++ b/index.html
@@ -465,12 +465,10 @@
 				Application Program Interface (API) -->
 				<div class='container'>
 					<div class='row'>
-						<div class='col-sm-5 box-padd'>
-							<center>
-								<a class='box'>
-									HyperText Markup Language (HTML 5)
-								</a>
-							</center>
+						<div class='col-sm-5 box-padd' align="center">
+							<a class='box'>
+								HyperText Markup Language (HTML 5)
+							</a>
 						</div>
 						<div class='col-sm-4 box-padd'>
 							<center>
