added new project-PinterestAutomatic

--- a/index.html
+++ b/index.html
@@ -154,6 +154,30 @@
 					<div class='proj-text'>
 						<div class='row'>
 							<div class='col-sm-4' align="center">
+								<img src="img/projects/pinterest.png" alt='Pinterest Automatic' class='thumbnail proj-img'>
+								<div class='proj-panel'>
+									<div class='panel'>
+										<div class='panel-heading'>
+											<div class='proj-panel-heading'>
+												<strong>
+													Pinterest Automatic
+												</strong>
+											</div>
+										</div>
+										<div class='panel-body'>
+											This is a webapp to Pin all images of one Pinterest Board to another automatically.
+											Login system is made using <strong>Pinterest OAuth 2.0</strong> Authorization process.
+											User doesn’t need to login every time. <strong>Cookies</strong> used to remember user login for 7 days.<br><br>
+											<strong><a href="https://github.com/AnirudhGoel/PinterestAutomatic" target='_blank'>Github</a> | 
+											<a href="https://pinterestautomatic.herokuapp.com/" target='_blank'>Demo</a></strong>
+										</div>
+										<div class='panel-footer'>
+											 Pinterest API, Pinterest OAuth 2.0, Cookies, HTML5, CSS3, Bootstrap, PHP
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='col-sm-4' align="center">
 								<img src="img/projects/stock.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -195,6 +219,11 @@
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+
+					<div class='proj-text'>
+						<div class='row'>
 							<div class='col-sm-4' align="center">
 								<img src="img/projects/timestamp.jpg" alt='Timestamp Converter' class='thumbnail proj-img'>
 								<div class='proj-panel'>
@@ -217,11 +246,6 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-
-					<div class='proj-text'>
-						<div class='row'>
 							<div class='col-sm-4' align="center">
 								<img src="img/projects/social.jpg" alt='My Social Network' class='thumbnail proj-img'>
 								<div class='proj-panel'>
@@ -261,6 +285,10 @@
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
 							<div class='col-sm-4' align="center">
 								<img src="img/projects/car-game.jpg" alt='Car Game C++' class='thumbnail proj-img'>
 								<div class='proj-panel'>
