Whatsapp Emoticon Suggestions Extension Added with Link

--- a/index.html
+++ b/index.html
@@ -167,12 +167,34 @@
 										<div class='panel-body'>
 											This is a webapp to Pin all images of one Pinterest Board to another automatically.
 											Login system is made using <strong>Pinterest OAuth 2.0</strong> Authorization process.
-											User doesn’t need to login every time. <strong>Cookies</strong> used to remember user login for 7 days.<br><br>
+											User doesn’t need to login every time. <strong>Cookies</strong> are used to remember user login for 7 days.<br><br>
 											<strong><a href="https://github.com/AnirudhGoel/PinterestAutomatic" target='_blank'>Github</a> | 
 											<a href="https://pinterestautomatic.herokuapp.com/" target='_blank'>Demo</a></strong>
 										</div>
 										<div class='panel-footer'>
 											 Pinterest API, Pinterest OAuth 2.0, Cookies, HTML5, CSS3, Bootstrap, PHP
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='col-sm-4' align="center">
+								<img src="img/projects/whatsapp.png" alt='Whatsapp Emoji Suggestion' class='thumbnail proj-img'>
+								<div class='proj-panel'>
+									<div class='panel'>
+										<div class='panel-heading'>
+											<div class='proj-panel-heading'>
+												<strong>
+													Whatsapp Emoticon Suggestions
+												</strong>
+											</div>
+										</div>
+										<div class='panel-body'>
+											Chrome Browser extension to convert text smileys to WhatsApp Emoticons and also provide suggestions of similar smilies (with shortcuts) for Whatsapp Web.<br><br>
+											<strong><a href="https://github.com/AnirudhGoel/Whatsapp-Emoticons-Suggest" target='_blank'>Github</a> | 
+											<a href="https://chrome.google.com/webstore/detail/whatsapp-emoticons-sugges/pdicajhpekmkjildobfnokpdmnejlnfm?hl=en-US&gl=IN" target='_blank'>Download</a></strong>
+										</div>
+										<div class='panel-footer'>
+											JS, jQuery
 										</div>
 									</div>
 								</div>
@@ -189,7 +211,6 @@
 											</div>
 										</div>
 										<div class='panel-body'>
-											This is a project that I made individually in Financial Hackathon @ NSIT 2016 for which I won the <strong>1st Position</strong>.
 											In this web application, user can enter the information of stocks bought by him and the application obtains the live prices of these stocks along with net profit/loss &amp; displays them in a Portfolio.<br><br>
 											<strong><a href="https://github.com/AnirudhGoel/Stock-Monitor-and-Portfolio-Manager.git" target='_blank'>Github</a> | 
 											<a href="http://anirudhgoel.xyz/Stock_Monitor/Front_Page.html" target='_blank'>Demo</a></strong>
@@ -200,6 +221,11 @@
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+
+					<div class='proj-text'>
+						<div class='row'>
 							<div class='col-sm-4' align="center">
 								<img src="img/projects/ToDo.png" alt='To Do List' class='thumbnail proj-img'>
 								<div class='proj-panel'>
@@ -219,11 +245,6 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-
-					<div class='proj-text'>
-						<div class='row'>
 							<div class='col-sm-4' align="center">
 								<img src="img/projects/timestamp.jpg" alt='Timestamp Converter' class='thumbnail proj-img'>
 								<div class='proj-panel'>
@@ -266,6 +287,10 @@
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
 							<div class='col-sm-4' align="center">
 								<img src="img/projects/phottendance.png" alt='Phottendance' class='thumbnail proj-img'>
 								<div class='proj-panel'>
@@ -285,10 +310,6 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="proj-text">
-						<div class="row">
 							<div class='col-sm-4' align="center">
 								<img src="img/projects/car-game.jpg" alt='Car Game C++' class='thumbnail proj-img'>
 								<div class='proj-panel'>
