--- a/index.html
+++ b/index.html
@@ -200,6 +200,34 @@
 								</div>
 							</div>
 							<div class='col-sm-4' align="center">
+								<img src="img/projects/chatbot.png" alt='Chatbot' class='thumbnail proj-img'>
+								<div class='proj-panel'>
+									<div class='panel'>
+										<div class='panel-heading'>
+											<div class='proj-panel-heading'>
+												<strong>
+													Educational cum Fun Chatbot
+												</strong>
+											</div>
+										</div>
+										<div class='panel-body'>
+											This Chatbot gives you answers, but with a wink ;)
+											The Chatbot uses multiple APIs to fetch different types of answers - HP HavenOn Demand, Wikipedia API, Google YouTube API, Pandora Bots API. Sometimes it gives you descriptive and informative answers, at other times it's just lousy.<br><br>
+											<strong><a href="https://github.com/AnirudhGoel/Chatbot" target='_blank'>Github</a> | 
+											<a href="https://edu-chatbot.herokuapp.com/" target='_blank'>Demo</a></strong>
+										</div>
+										<div class='panel-footer'>
+											HTML5, CSS3, Bootstrap, PHP, API, JS, jQuery
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class='proj-text'>
+						<div class='row'>
+							<div class='col-sm-4' align="center">
 								<img src="img/projects/stock.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -221,11 +249,28 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-
-					<div class='proj-text'>
-						<div class='row'>
+							<div class='col-sm-4' align="center">
+								<img src="img/projects/stock.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
+								<div class='proj-panel'>
+									<div class='panel'>
+										<div class='panel-heading'>
+											<div class='proj-panel-heading'>
+												<strong>
+													Stock Monitor and Portfolio Manager
+												</strong>
+											</div>
+										</div>
+										<div class='panel-body'>
+											In this web application, user can enter the information of stocks bought by him and the application obtains the live prices of these stocks along with net profit/loss &amp; displays them in a Portfolio.<br><br>
+											<strong><a href="https://github.com/AnirudhGoel/Stock-Monitor-and-Portfolio-Manager.git" target='_blank'>Github</a> | 
+											<a href="http://anirudhgoel.xyz/Stock_Monitor/Front_Page.html" target='_blank'>Demo</a></strong>
+										</div>
+										<div class='panel-footer'>
+											HTML5, CSS3, Bootstrap, PHP, API, JS
+										</div>
+									</div>
+								</div>
+							</div>
 							<div class='col-sm-4' align="center">
 								<img src="img/projects/ToDo.png" alt='To Do List' class='thumbnail proj-img'>
 								<div class='proj-panel'>
@@ -245,6 +290,10 @@
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
 							<div class='col-sm-4' align="center">
 								<img src="img/projects/timestamp.jpg" alt='Timestamp Converter' class='thumbnail proj-img'>
 								<div class='proj-panel'>
@@ -287,10 +336,6 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="proj-text">
-						<div class="row">
 							<div class='col-sm-4' align="center">
 								<img src="img/projects/phottendance.png" alt='Phottendance' class='thumbnail proj-img'>
 								<div class='proj-panel'>
@@ -310,6 +355,10 @@
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
 							<div class='col-sm-4' align="center">
 								<img src="img/projects/car-game.jpg" alt='Car Game C++' class='thumbnail proj-img'>
 								<div class='proj-panel'>
