Added Interests Ranker

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 											</div>
 										</div>
 										<div class='panel-body'>
-											Chrome Browser extension to convert text smileys to WhatsApp Emoticons and also provide suggestions of similar smilies (with shortcuts) for Whatsapp Web.<br><br>
+											Chrome Browser extension to convert text smileys to <strong>WhatsApp Emoticons</strong> and also provide <strong>suggestions of similar smilies</strong> (with shortcuts) for Whatsapp Web.<br><br>
 											<strong><a href="https://github.com/AnirudhGoel/Whatsapp-Emoticons-Suggest" target='_blank'>Github</a> | 
 											<a href="https://chrome.google.com/webstore/detail/whatsapp-emoticons-sugges/pdicajhpekmkjildobfnokpdmnejlnfm?hl=en-US&gl=IN" target='_blank'>Download</a></strong>
 										</div>
@@ -212,7 +212,7 @@
 										</div>
 										<div class='panel-body'>
 											This Chatbot gives you answers, but with a wink ;)
-											The Chatbot uses multiple APIs to fetch different types of answers - HP HavenOn Demand, Wikipedia API, Google YouTube API, Pandora Bots API. Sometimes it gives you descriptive and informative answers, at other times it's just lousy.<br><br>
+											The Chatbot uses multiple APIs to fetch different types of answers - <strong>HP HavenOn Demand, Wikipedia API, Google YouTube API, Pandora Bots API</strong>. Sometimes it gives you descriptive and informative answers, at other times it's just lousy.<br><br>
 											<strong><a href="https://github.com/AnirudhGoel/Chatbot" target='_blank'>Github</a> | 
 											<a href="https://edu-chatbot.herokuapp.com/" target='_blank'>Demo</a></strong>
 										</div>
@@ -228,23 +228,23 @@
 					<div class='proj-text'>
 						<div class='row'>
 							<div class='col-sm-4' align="center">
-								<img src="img/projects/stock.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
+								<img src="img/projects/interest.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
 										<div class='panel-heading'>
 											<div class='proj-panel-heading'>
 												<strong>
-													Stock Monitor and Portfolio Manager
+													Interests Ranker
 												</strong>
 											</div>
 										</div>
 										<div class='panel-body'>
-											In this web application, user can enter the information of stocks bought by him and the application obtains the live prices of these stocks along with net profit/loss &amp; displays them in a Portfolio.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/Stock-Monitor-and-Portfolio-Manager.git" target='_blank'>Github</a> | 
-											<a href="http://anirudhgoel.xyz/Stock_Monitor/Front_Page.html" target='_blank'>Demo</a></strong>
+											A webapp which displays <strong>common interests</strong> of a group of people in form of a <strong>prioritized list</strong> by reading their Github Profiles. Can be used for knowing the audience for hosting a workshop or educational session or for knowing the strengths of some Hackathon team.<br><br>
+											<strong><a href="https://github.com/AnirudhGoel/Interests-Ranker" target='_blank'>Github</a> | 
+											<a href="https://interests-ranker.herokuapp.com/sample/index.html" target='_blank'>Demo</a></strong>
 										</div>
 										<div class='panel-footer'>
-											HTML5, CSS3, Bootstrap, PHP, API, JS
+											HTML5, CSS3, Bootstrap, PHP, Github API, JS
 										</div>
 									</div>
 								</div>
