--- a/index.html
+++ b/index.html
@@ -811,6 +811,7 @@
 				});
 			});
 		</script> -->
+		<!-- will use wow.js in future -->
 		<script src="js/resume.js"></script>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
