--- a/index.html
+++ b/index.html
@@ -812,6 +812,7 @@
 			});
 		</script> -->
 		<!-- will use wow.js in future -->
+		<!-- Also use Typeform instead of PHP and JS script for resume -->
 		<script src="js/resume.js"></script>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
