--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
 							</a>
 						</li>
 						<li>
-							<a onclick="resume()">
+							<a href="https://anirudhgoel.typeform.com/to/LUFqDL" data-mode="1" target="_blank">
 								<i class='fa fa-file-text'></i>
-								&nbsp;Resume
+								&nbsp;Resume / Contact Me
 							</a>
+							<script>
+								(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()
+							</script>
 						</li>
 					</ul>
 				</div>
