--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
 			</section>
 			
 
-			<section class='page2'>
+			<section class="page2">
 				<div class="container-fluid">
 					<br>
 					<br>
 					<br>
-					<div class='row reponsive'>
+					<div class="row reponsive">
 						<div class='col-sm-12'>
 							<div class='headings'>
 								My Projects
