Improved meta tags

--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-		<meta name="author" content="Anirudh Goel">
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+		<meta name="author" content="Anirudh Goel" />
+		<meta name="designer" content="Anirudh Goel" />
 		<meta name="description" content="Hi! 
-		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi.">
+		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi." />
 		<meta name="keywords" content="anirudhgoel, anirudh goel, anirudhgoel.delhi, anirudhgoeldelhi, anirudh, MAIT, Front End Developer, Backend Developer, Web Designer, Web Developer, Graphic Designer, PHP, Python, MySQL, HTML, CSS, Bootstrap, C, C++, API, Photoshop, Illustrator, whythispage, Interpersonal Interaction, Human Nature, Blog">
-		<meta property="og:url" content="http://www.anirudhgoel.xyz">
-		<meta property="og:site_name" content="Anirudh Goel (AnirudhGoel)">
-		<meta property="og:title" content="Anirudh Goel (AnirudhGoel)">
-		<meta property="og:type" content="website">
-		<meta property="og:image" content="img/Anirudh.jpg">
+		<meta name="robots" content="index, follow" />
+		<!-- Facebook -->
+		<meta property="og:url" content="http://www.anirudhgoel.me" />
+		<meta property="og:site_name" content="Anirudh Goel" />
+		<meta property="og:title" content="Anirudh Goel" />
+		<meta property="og:type" content="website" />
+		<meta property="og:image" content="img/Anirudh.jpg" />
 		<meta property="og:description" content="Hi! 
-		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi.">
+		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi." />
+		<!-- Google Plus -->
+		<meta itemprop="name" content="Anirudh Goel" />
+		<meta itemprop="description" content="Hi! 
+		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi." />
+		<meta itemprop="image" content="img/Anirudh.jpg" />
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Anirudh Goel" />
+		<meta name="twitter:description" content="Hi! 
+		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi." />
+		<meta name="twitter:site" content="@AnirudhDelhi" />
+		<meta name="twitter:creator" content="@AnirudhDelhi" />
+		<meta name="twitter:url" content="http://www.anirudhgoel.me" />
+		<meta name="twitter:image" content="img/Anirudh.jpg" />
 
 		<title>Anirudh Goel</title>
 		
