removed extra files + added animate and wow animations

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 		
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-		<link rel="shortcut icon" href="img/icon2.png">
+		<link rel="stylesheet" type="text/css" href="css/animate.min.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="shortcut icon" href="img/icon2.png">
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -182,7 +183,7 @@
 					<br>
 					<div class='proj-text'>
 						<div class='row'>
-							<div class='col-sm-4' align="center">
+							<div class='col-sm-4 wow slideInLeft' align="center">
 								<img src="img/projects/pinterest.png" alt='Pinterest Automatic' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -206,7 +207,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4' align="center">
+							<div class='col-sm-4 wow slideInUp' align="center">
 								<img src="img/projects/whatsapp.png" alt='Whatsapp Emoji Suggestion' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -228,7 +229,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4' align="center">
+							<div class='col-sm-4 wow slideInRight' align="center">
 								<img src="img/projects/chatbot.png" alt='Chatbot' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -255,7 +256,7 @@
 					</div>
 					<div class='proj-text'>
 						<div class='row'>
-							<div class='col-sm-4' align="center">
+							<div class='col-sm-4 wow slideInLeft' align="center">
 								<img src="img/projects/interest.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -277,7 +278,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4' align="center">
+							<div class='col-sm-4 wow slideInUp' align="center">
 								<img src="img/projects/stock.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -299,7 +300,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4' align="center">
+							<div class='col-sm-4 wow slideInRight' align="center">
 								<img src="img/projects/ToDo.png" alt='To Do List' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -322,7 +323,7 @@
 					</div>
 					<div class="proj-text">
 						<div class="row">
-							<div class='col-sm-4' align="center">
+							<div class='col-sm-4 wow slideInLeft' align="center">
 								<img src="img/projects/timestamp.jpg" alt='Timestamp Converter' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -344,7 +345,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4' align="center">
+							<div class='col-sm-4 wow slideInUp' align="center">
 								<img src="img/projects/social.jpg" alt='My Social Network' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -364,7 +365,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4' align="center">
+							<div class='col-sm-4 wow slideInRight' align="center">
 								<img src="img/projects/phottendance.png" alt='Phottendance' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -387,7 +388,7 @@
 					</div>
 					<div class="proj-text">
 						<div class="row">
-							<div class='col-sm-4' align="center">
+							<div class='col-sm-4 wow slideInLeft' align="center">
 								<img src="img/projects/car-game.jpg" alt='Car Game C++' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -424,7 +425,7 @@
 				<div class='container-fluid' align="center">
 					<div class="row">
 						<div class="col-md-6">
-							<div class="intern-box">
+							<div class="intern-box wow slideInLeft">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -453,7 +454,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="intern-box">
+							<div class="intern-box wow slideInLeft">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -475,7 +476,7 @@
 							</div>
 						</div>
 						<div class="col-md-6">
-							<div class="intern-box">
+							<div class="intern-box wow slideInRight">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -504,7 +505,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="intern-box">
+							<div class="intern-box wow slideInRight">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -526,7 +527,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="intern-box">
+							<div class="intern-box wow slideInRight">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -564,7 +565,7 @@
 				<div class='headings'>
 					Technologies Known
 				</div>
-				<div class='container'>
+				<div class='container wow fadeIn'>
 					<div class='row'>
 						<div class='col-sm-5 box-padd' align="center">
 							<a class='box'>
@@ -733,7 +734,7 @@
 					<div class='row'>
 						<div class='col-sm-2'></div>
 						<div class='col-sm-9'>
-							<div class='not-work-box'>
+							<div class='not-work-box wow fadeInUp'>
 								<div class='not-work-text'>
 									<h3>Blog</h3>
 									I feel that I have a good understanding of Interpersonal Interaction and Human Nature, so I love to fill my blog with my thoughts | <a href="https://whythispage.wordpress.com/" target='_blank'>Why This Page..?!</a>
@@ -746,7 +747,7 @@
 					<div class='row'>
 						<div class='col-sm-2'></div>
 						<div class='col-sm-9'>
-							<div class='not-work-box'>
+							<div class='not-work-box wow fadeInUp'>
 								<div class='not-work-text'>
 									<h3>Books</h3>
 									I am a huge fan of Fiction Books, especially <span style='color:red;font-size:16px;'><i class='fa fa-magic'></i>&nbsp;Harry Potter&nbsp;<i class='fa fa-bolt'></i></span> and I always try to squeeze some time out of the busy schedule to read | <a href="https://www.goodreads.com/user/show/17917384-anirudh-goel" target='_blank'>Goodreads</a>
@@ -759,7 +760,7 @@
 					<div class='row'>
 						<div class='col-sm-2'></div>
 						<div class='col-sm-9'>
-							<div class='not-work-box'>
+							<div class='not-work-box wow fadeInUp'>
 								<div class='not-work-text'>
 									<h3>Sherlock</h3>
 									Whether it be Robert Downey Jr.'s movies or Benedict Cumberbatch's Sherlock BBC or Arthur Doyle's originals, I love reading and watching everything Sherlock.
@@ -772,10 +773,10 @@
 					<div class='row'>
 						<div class='col-sm-2'></div>
 						<div class='col-sm-9'>
-							<div class='not-work-box'>
+							<div class='not-work-box wow fadeInUp'>
 								<div class='not-work-text'>
 									<h3>Pinterest</h3>
-									With a 8k+ pins profile, I prefer spending my scrap time on Pinterest rather than with #<i class='fa fa-twitter'></i> or @<i class='fa fa-facebook'></i>, if you know what I mean.
+									With a 10k+ pins profile, I prefer spending my scrap time on Pinterest rather than with #<i class='fa fa-twitter'></i> or @<i class='fa fa-facebook'></i>, if you know what I mean.
 								</div>
 							</div>
 						</div>
@@ -799,19 +800,9 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-		<!-- Trying to find a better library for this-
-		Responsiveness issues in this one -->
-
-		<!-- <script src="js/jquery.fadethis.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+		<script src="js/wow.min.js"></script>
 		<script>
-			$(document).ready(function() {
-				$(window).fadeThis({
-					reverse: false
-				});
-			});
-		</script> -->
-		<!-- will use wow.js in future -->
+			new WOW().init();
+		</script>
 	</body>
 </html>
