made animations responsive

--- a/index.html
+++ b/index.html
@@ -800,6 +800,15 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script>
+			function changeAnimation() {
+				var width = $(window).width();
+				if(width < 768) {
+					$(".wow").removeClass("slideInUp slideInLeft slideInRight fadeIn fadeInUp").addClass("fadeInUp");
+				}
+			}
+			changeAnimation();
+		</script>
 		<script src="js/wow.min.js"></script>
 		<script>
 			new WOW().init();
